--- a/style.css
+++ b/style.css
@@ -23,11 +23,15 @@ p {
     text-align: center;
     border-radius: 5px;
     border-image: repeating-linear-gradient(30deg, #4d9f0c, #9198e5, #4d9f0c 20px) 60;
-    
+    padding: 5px; 
+    border: 10px outset silver;
+    font-family: sans-serif;
+    font-weight: 300px;
+    font-size: 15px; 
 }
 
 .productlistitem {
-    margin-left: 15px;
+    text-align: center;
 }
 
 .mexicothings {
@@ -136,3 +140,8 @@ font-family:Arial, Helvetica, sans-serif;
     margin: 50px;
     padding: 50px
 }
+
+.img-fluid-test {
+    max-wdith: 100%;
+    height: 80px;
+    }
